# anchor-gen

crates/anchor-gen/: Cargo.toml
crates/anchor-gen/src/: lib.rs
crates/anchor-generate-cpi-crate/: Cargo.toml
crates/anchor-generate-cpi-crate/src/: lib.rs
crates/anchor-generate-cpi-interface/: Cargo.toml
crates/anchor-generate-cpi-interface/src/: lib.rs
crates/anchor-idl/: Cargo.toml
