[package]
name = "anchor-gen-mod"
version = "0.3.2"
edition = "2021"
description = "Generates an Anchor CPI crate from a JSON IDL."
authors = ["Ian Macalinao <ian@saber.so>"]
repository = "https://github.com/saber-hq/anchor-gen"
license = "Apache-2.0"
keywords = ["solana", "anchor"]
readme = "../../README.md"

[lib]
name = "anchor_gen_mod"
path = "src/lib.rs"

[features]
compat-program-result-mod = [
  "anchor-generate-cpi-crate-mod/compat-program-result",
  "anchor-generate-cpi-interface-mod/compat-program-result-mod"
]

[dependencies]
anchor-generate-cpi-crate-mod = { version = "0.3.2", path = "../anchor-generate-cpi-crate" }
anchor-generate-cpi-interface-mod = { version = "0.3.2", path = "../anchor-generate-cpi-interface" }
