[package]
name = "anchor-generate-cpi-interface-mod"
version = "0.3.2"
edition = "2021"
description = "Generates an Anchor CPI crate from a JSON IDL."
authors = ["Ian Macalinao <ian@saber.so>"]
license = "Apache-2.0"
keywords = ["solana", "anchor"]
readme = "../../README.md"

[lib]
name = "anchor_generate_cpi_interface_mod"
path = "src/lib.rs"
proc-macro = true

[features]
compat-program-result-mod = ["anchor-idl-mod/compat-program-result"]

[dependencies]
bytemuck = {version = "1.13.1", features = ["min_const_generics", "derive"]}
anchor-idl-mod = { version = "0.3.2", path = "../anchor-idl" }
darling = "0.14"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
anchor-lang = "0.24.2"
